change nav to fix height change modal to fixed and overflow scroll or auto

--- a/src/components/about_us/about_us.scss
+++ b/src/components/about_us/about_us.scss
@@ -1,5 +1,5 @@
 .about-container {
-    height: 90vh;
+    height: calc(100vh - 70px);
 
     .first {
         background-image: url('../../assets/images/aboutus.jpg');
